# kimun

./: .gitignore  .kimun.toml.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  book.toml  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  SUMMARY.md  architecture.md  contributing.md  languages.md  references.md
docs/commands/: age.md  authors.md  churn.md  cogcom.md  cycom.md  deps.md  dups.md  hal.md  hotspots.md  indent.md  knowledge.md  loc.md  mi.md  miv.md  report.md  score.md  smells.md  tc.md
src/: cli.rs  cli_help.rs  config.rs  detection.rs  main.rs  report_helpers.rs  report_helpers_test.rs  util.rs  util_test.rs  walk.rs  walk_test.rs
src/age/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/ai/: client.rs  executor.rs  mod.rs  permissions.rs  schema.rs  skill.rs  tools.rs  tools_test.rs
src/authors/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/churn/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/cogcom/: analyzer.rs  analyzer_test.rs  detection.rs  detection_test.rs  markers.rs  markers_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/cycom/: analyzer.rs  analyzer_test.rs  detection.rs  detection_test.rs  markers.rs  markers_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/dups/: detector.rs  detector_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/git/: mod.rs  mod_test.rs
src/hal/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs  rules.rs  string_mask.rs  string_mask_test.rs  tokenizer.rs  tokenizer_test.rs
src/hotspots/: mod.rs  mod_test.rs  report.rs  report_test.rs
src/indent/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/init/: mod.rs  template.toml
src/knowledge/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/loc/: counter.rs  counter_test.rs  fsm.rs  lang_macro.rs  language.rs  language_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/mi/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/miv/: analyzer.rs  analyzer_test.rs  mod.rs  mod_test.rs  report.rs  report_test.rs
src/report/: analyzer.rs  builder.rs  data.rs  json.rs  markdown.rs  markdown_test.rs  mod.rs  mod_test.rs
src/score/: analyzer.rs  analyzer_test.rs  (+11 more)
(+17 files in other folders)
