[package]
name = "kimun"
version = "0.20.0"
edition = "2024"
description = "Code metrics tool — health score, complexity, duplication, hotspots, ownership"
license = "MIT"
repository = "https://github.com/lnds/kimun"
homepage = "https://github.com/lnds/kimun"
keywords = ["code-metrics", "complexity", "loc", "halstead", "maintainability"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "km"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tempfile = "3"
unicode-width = "0.2.2"
chrono = { version = "0.4.44", features = ["default"] }
clap_complete = "4.6.0"

[features]
vendored-openssl = ["git2/vendored-openssl"]
